--- a/index.html
+++ b/index.html
@@ -61,6 +61,42 @@
         <span id="spn3"></span>
     </label>
 
+    <!-- Flechas -->
+    <!-- Botón 8 -->
+    <div class="button" id="buttonMenu6">
+      <span class="button_bar Bar1111111" id="bar1111111"></span>
+      <span class="button_bar Bar2222222"></span>
+      <span class="button_bar Bar3333333" id="bar3333333"></span>
+    </div>
+
+    <!-- Botón 9 -->
+    <div class="button" id="buttonMenu7">
+      <span class="button_bar Bar11111111" id="bar11111111"></span>
+      <span class="button_bar Bar22222222"></span>
+      <span class="button_bar Bar33333333" id="bar33333333"></span>
+    </div>
+
+    <!-- Botón 10 -->
+    <div class="button" id="buttonMenu8">
+      <span class="button_bar Bar111111111" id="bar111111111"></span>
+      <span class="button_bar Bar222222222"></span>
+      <span class="button_bar Bar333333333" id="bar333333333"></span>
+    </div>
+
+    <!-- Botón 11 -->
+    <div class="button" id="buttonMenu9">
+      <span class="button_bar Bar1111111111" id="bar1111111111"></span>
+      <span class="button_bar Bar2222222222"></span>
+      <span class="button_bar Bar3333333333" id="bar3333333333"></span>
+    </div>
+
+    <!-- Botón 12 -->
+    <div class="button" id="buttonMenu10">
+      <span class="button_bar Bar11111111111" id="bar11111111111"></span>
+      <span class="button_bar Bar22222222222" id="bar22222222222"></span>
+      <span class="button_bar Bar33333333333" id="bar33333333333"></span>
+    </div>
+
 
     <script src="./script.js"></script>
 
