--- a/index.html
+++ b/index.html
@@ -97,6 +97,34 @@
       <span class="button_bar Bar33333333333" id="bar33333333333"></span>
     </div>
 
+    <!-- Botón 13 -->
+    <div class="button" id="buttonMenu11">
+      <span class="button_bar Bar111111111111" id="bar111111111111"></span>
+      <span class="button_bar Bar222222222222" id="bar222222222222"></span>
+      <span class="button_bar Bar333333333333" id="bar333333333333"></span>
+    </div>
+
+    <!-- Botón 14 -->
+    <div class="button" id="buttonMenu12">
+      <span class="button_bar Bar1111111111111" id="bar1111111111111"></span>
+      <span class="button_bar Bar2222222222222" id="bar2222222222222"></span>
+      <span class="button_bar Bar3333333333333" id="bar3333333333333"></span>
+    </div>
+
+    <!-- Botón 15 -->
+    <div class="button" id="buttonMenu13">
+      <span class="button_bar Bar11111111111111" id="bar11111111111111"></span>
+      <span class="button_bar Bar22222222222222" id="bar22222222222222"></span>
+      <span class="button_bar Bar33333333333333" id="bar33333333333333"></span>
+    </div>
+
+    <!-- Botón 16 -->
+    <div class="button" id="buttonMenu14">
+      <span class="button_bar Bar111111111111111" id="bar111111111111111"></span>
+      <span class="button_bar Bar222222222222222" id="bar222222222222222"></span>
+      <span class="button_bar Bar333333333333333" id="bar333333333333333"></span>
+    </div>
+
 
     <script src="./script.js"></script>
 
